[gd_scene load_steps=89 format=3 uid="uid://bkhtrst5jj7qb"]

[ext_resource type="Script" path="res://player/Garrick_Stormwind.gd" id="1_tspnc"]
[ext_resource type="Resource" uid="uid://btk5ixn2yabpu" path="res://garrick_stormwind_inv.tres" id="2_poubp"]
[ext_resource type="Texture2D" uid="uid://dgylc53x0m4d4" path="res://images/treating/character/character_medieval_pixel/character sheet 2.png" id="2_yobrj"]
[ext_resource type="Script" path="res://inventory/inventory_data_equip.gd" id="3_wxtal"]
[ext_resource type="Script" path="res://player/PlayerStatus.gd" id="4_gglgq"]
[ext_resource type="Script" path="res://inventory/slot_data.gd" id="4_ybxt3"]
[ext_resource type="Texture2D" uid="uid://caut73sedbs12" path="res://images/Tiny-Swords/Factions/Knights/Troops/Warrior/Red/Warrior_Red.png" id="5_6id0t"]
[ext_resource type="PackedScene" uid="uid://do1yubo7ebqbh" path="res://inventory/inventory.tscn" id="8_b2ck1"]
[ext_resource type="Script" path="res://player/crafting.gd" id="12_2hyxs"]
[ext_resource type="Script" path="res://scripts/player_scripts/battles.gd" id="12_do1co"]
[ext_resource type="Script" path="res://player/AttributeUI.gd" id="12_mrgvg"]
[ext_resource type="Script" path="res://scripts/player_scripts/player_status.gd" id="13_ls4ss"]
[ext_resource type="Script" path="res://scripts/player_scripts/play_anim.gd" id="14_cbjvx"]
[ext_resource type="Script" path="res://scripts/player_scripts/ai_requests.gd" id="15_ope3e"]
[ext_resource type="Script" path="res://scripts/market_scripts/currency_manager.gd" id="16_c0t1n"]
[ext_resource type="Script" path="res://scripts/market_scripts/store.gd" id="17_tjxsh"]
[ext_resource type="Script" path="res://scripts/market_scripts/transaction_manager.gd" id="18_vr8t2"]
[ext_resource type="Script" path="res://scripts/notification_scripts/notifications.gd" id="19_g610a"]
[ext_resource type="Script" path="res://player/ActionManager.gd" id="19_hhwra"]
[ext_resource type="Script" path="res://player/AreaDetectionHandler.gd" id="19_up4r5"]
[ext_resource type="Script" path="res://player/ActionFunctions.gd" id="20_b0aum"]

[sub_resource type="Resource" id="Resource_2uak5"]
script = ExtResource("4_ybxt3")
quantity = 1

[sub_resource type="Resource" id="Resource_u8635"]
script = ExtResource("4_ybxt3")
quantity = 1

[sub_resource type="Resource" id="Resource_4c1gi"]
script = ExtResource("4_ybxt3")
quantity = 1

[sub_resource type="Resource" id="Resource_113e3"]
script = ExtResource("4_ybxt3")
quantity = 1

[sub_resource type="Resource" id="Resource_k8ug0"]
script = ExtResource("3_wxtal")
slot_datas = Array[ExtResource("4_ybxt3")]([SubResource("Resource_2uak5"), SubResource("Resource_u8635"), SubResource("Resource_4c1gi"), SubResource("Resource_113e3")])
player = 0

[sub_resource type="CircleShape2D" id="CircleShape2D_sdljw"]
radius = 7.28011

[sub_resource type="AtlasTexture" id="AtlasTexture_g03fh"]
atlas = ExtResource("5_6id0t")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4mhb"]
atlas = ExtResource("5_6id0t")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_130f8"]
atlas = ExtResource("5_6id0t")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqwvq"]
atlas = ExtResource("5_6id0t")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_usgeg"]
atlas = ExtResource("5_6id0t")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya3ms"]
atlas = ExtResource("5_6id0t")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xdhp"]
atlas = ExtResource("5_6id0t")
region = Rect2(960, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0mb6"]
atlas = ExtResource("5_6id0t")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aty80"]
atlas = ExtResource("5_6id0t")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_etr5l"]
atlas = ExtResource("5_6id0t")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yigyc"]
atlas = ExtResource("5_6id0t")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddpxh"]
atlas = ExtResource("5_6id0t")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1l5i"]
atlas = ExtResource("5_6id0t")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_urkmf"]
atlas = ExtResource("5_6id0t")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_02ghi"]
atlas = ExtResource("5_6id0t")
region = Rect2(192, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmesq"]
atlas = ExtResource("5_6id0t")
region = Rect2(384, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg4hh"]
atlas = ExtResource("2_yobrj")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p31yv"]
atlas = ExtResource("2_yobrj")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpgo8"]
atlas = ExtResource("2_yobrj")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_87o5g"]
atlas = ExtResource("2_yobrj")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0xhn"]
atlas = ExtResource("2_yobrj")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjh4f"]
atlas = ExtResource("2_yobrj")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehqym"]
atlas = ExtResource("5_6id0t")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4yu6"]
atlas = ExtResource("5_6id0t")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lmpm"]
atlas = ExtResource("5_6id0t")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_agslg"]
atlas = ExtResource("5_6id0t")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptk0f"]
atlas = ExtResource("5_6id0t")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjou1"]
atlas = ExtResource("5_6id0t")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uejr2"]
atlas = ExtResource("5_6id0t")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s16jk"]
atlas = ExtResource("5_6id0t")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_igxvl"]
atlas = ExtResource("5_6id0t")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_evsll"]
atlas = ExtResource("5_6id0t")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhr6s"]
atlas = ExtResource("5_6id0t")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fruh"]
atlas = ExtResource("5_6id0t")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sljs1"]
atlas = ExtResource("5_6id0t")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmna7"]
atlas = ExtResource("5_6id0t")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_stjsw"]
atlas = ExtResource("5_6id0t")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqx0u"]
atlas = ExtResource("5_6id0t")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmgq7"]
atlas = ExtResource("5_6id0t")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3utae"]
atlas = ExtResource("5_6id0t")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nernq"]
atlas = ExtResource("5_6id0t")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nriio"]
atlas = ExtResource("5_6id0t")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl2tx"]
atlas = ExtResource("5_6id0t")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rf6l"]
atlas = ExtResource("5_6id0t")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wndo"]
atlas = ExtResource("5_6id0t")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvvsi"]
atlas = ExtResource("5_6id0t")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wqms"]
atlas = ExtResource("5_6id0t")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfns0"]
atlas = ExtResource("5_6id0t")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yglu"]
atlas = ExtResource("5_6id0t")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7og7v"]
atlas = ExtResource("5_6id0t")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ubhn"]
atlas = ExtResource("5_6id0t")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_im1h1"]
atlas = ExtResource("5_6id0t")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqsve"]
atlas = ExtResource("5_6id0t")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ornw1"]
atlas = ExtResource("5_6id0t")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_v13i0"]
atlas = ExtResource("5_6id0t")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt358"]
atlas = ExtResource("5_6id0t")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uquov"]
atlas = ExtResource("5_6id0t")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mccg4"]
atlas = ExtResource("5_6id0t")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_ul8hp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g03fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4mhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_130f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqwvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usgeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya3ms")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xdhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0mb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aty80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etr5l")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yigyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddpxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1l5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urkmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02ghi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmesq")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg4hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p31yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpgo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87o5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0xhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjh4f")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehqym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4yu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lmpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agslg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptk0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjou1")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uejr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s16jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igxvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhr6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fruh")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sljs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmna7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stjsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqx0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmgq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3utae")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nernq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nriio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl2tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rf6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wndo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvvsi")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wqms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfns0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yglu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7og7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ubhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im1h1")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqsve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ornw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v13i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt358")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uquov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mccg4")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7jpv1"]
radius = 47.0425

[sub_resource type="CircleShape2D" id="CircleShape2D_g5j4u"]

[node name="player2" type="CharacterBody2D"]
position = Vector2(24, 47)
collision_layer = 7
collision_mask = 7
script = ExtResource("1_tspnc")
inventory_data = ExtResource("2_poubp")
equip_inventory_data = SubResource("Resource_k8ug0")

[node name="Label" type="Label" parent="."]
offset_left = -24.0
offset_top = 28.0
offset_right = 122.0
offset_bottom = 54.0
scale = Vector2(0.362991, 0.362991)
text = "Garrick Stormwind"
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 57)
shape = SubResource("CircleShape2D_sdljw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 59)
scale = Vector2(0.328125, 0.330729)
sprite_frames = SubResource("SpriteFrames_ul8hp")
animation = &"side_walk"
frame_progress = 0.802684
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="detection_area" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/detection_area"]
position = Vector2(1.52381, -11.3386)
shape = SubResource("CircleShape2D_7jpv1")

[node name="player_hitbox" type="Area2D" parent="."]
visible = false
position = Vector2(2, 55)

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
scale = Vector2(1.29908, 1.36403)
shape = SubResource("CircleShape2D_g5j4u")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="world_camera" type="Camera2D" parent="."]
position = Vector2(0, -1)
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 900
limit_bottom = 600
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="cliffside_camera" type="Camera2D" parent="."]
position = Vector2(1, 27)
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 100000
limit_bottom = 1000
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.188235, 0.67451, 0, 1)
offset_left = -14.0
offset_top = 37.0
offset_right = 151.0
offset_bottom = 64.0
scale = Vector2(0.2, 0.2)
fill_mode = 1
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="PlayerStatus" type="Node2D" parent="."]
visible = false
script = ExtResource("4_gglgq")

[node name="InventoryInterface" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="EquipInventory" type="Control" parent="InventoryInterface"]
layout_mode = 3
anchors_preset = 0
offset_left = -39.0
offset_top = 48.0
offset_right = 1.00001
offset_bottom = 88.0
scale = Vector2(0.7, 0.7)

[node name="Inventory" parent="InventoryInterface/EquipInventory" instance=ExtResource("8_b2ck1")]
layout_mode = 0
offset_left = 65.0
offset_top = -10.0
offset_right = 105.0
offset_bottom = 30.0
scale = Vector2(0.476928, 0.476928)

[node name="Label" type="Label" parent="InventoryInterface/EquipInventory"]
layout_mode = 2
offset_left = 65.0
offset_top = -18.0
offset_right = 138.0
offset_bottom = 8.0
scale = Vector2(0.297391, 0.289218)
text = "Equipped
"

[node name="CharacterInventory" type="Control" parent="InventoryInterface"]
layout_mode = 3
anchors_preset = 0
offset_left = 7.0
offset_top = 14.0
offset_right = 47.0
offset_bottom = 54.0
scale = Vector2(0.7, 0.7)

[node name="Inventory" parent="InventoryInterface/CharacterInventory" instance=ExtResource("8_b2ck1")]
layout_mode = 0
scale = Vector2(0.464701, 0.464701)

[node name="Label" type="Label" parent="InventoryInterface/CharacterInventory"]
layout_mode = 2
offset_top = -8.86
offset_right = 73.0
offset_bottom = 17.14
scale = Vector2(0.297391, 0.289218)
text = "Inventory
"

[node name="AttributeUI" type="VBoxContainer" parent="InventoryInterface"]
layout_mode = 0
offset_left = 148.0
offset_top = 11.0
offset_right = 188.0
offset_bottom = 51.0
scale = Vector2(0.3, 0.3)
theme_override_constants/separation = 2
script = ExtResource("12_mrgvg")

[node name="Crafting" type="Node" parent="."]
script = ExtResource("12_2hyxs")

[node name="battle_status" type="Node" parent="."]
script = ExtResource("12_do1co")

[node name="player_status" type="Node" parent="."]
script = ExtResource("13_ls4ss")

[node name="play_anim" type="Node" parent="."]
script = ExtResource("14_cbjvx")

[node name="ai_requests" type="Node" parent="."]
script = ExtResource("15_ope3e")

[node name="CurrencyManager" type="Node" parent="."]
script = ExtResource("16_c0t1n")

[node name="Store" type="Node" parent="."]
script = ExtResource("17_tjxsh")

[node name="TransactionManager" type="Node" parent="."]
script = ExtResource("18_vr8t2")

[node name="AreaDetectionHandler" type="Node" parent="."]
script = ExtResource("19_up4r5")

[node name="ActionManager" type="Node" parent="."]
script = ExtResource("19_hhwra")

[node name="ActionFunctions" type="Node" parent="."]
script = ExtResource("20_b0aum")

[node name="Notifications" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -24.0
offset_top = -47.0
offset_right = 16.0
offset_bottom = -7.0
script = ExtResource("19_g610a")

[connection signal="body_entered" from="AnimatedSprite2D/detection_area" to="AreaDetectionHandler" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="AnimatedSprite2D/detection_area" to="AreaDetectionHandler" method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
